@@ -1,19 +1,10 @@
 {
-  "timestamp" : "2025-02-11T01:09:25Z",
-  "count_outdated" : 1747,
-  "uniques_outdated" : 992,
-  "count" : 1772,
-  "uniques" : 1013,
+  "timestamp" : "2025-02-14T01:09:55Z",
+  "count_outdated" : 1748,
+  "uniques_outdated" : 993,
+  "count" : 1775,
+  "uniques" : 1016,
   "clones" : [
-    {
-      "timestamp": "2025-01-31T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 1 ],
-      "count_decinc": [ 0, 1 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 1 ],
-      "uniques_decinc": [ 0, 1 ]
-    },
     {
       "timestamp": "2025-02-01T00:00:00Z",
       "count": 1,
@@ -88,6 +79,24 @@
     },
     {
       "timestamp": "2025-02-10T00:00:00Z",
+      "count": 1,
+      "count_minmax": [ 1, 1 ],
+      "count_decinc": [ 0, 1 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ],
+      "uniques_decinc": [ 0, 1 ]
+    },
+    {
+      "timestamp": "2025-02-12T00:00:00Z",
+      "count": 2,
+      "count_minmax": [ 2, 2 ],
+      "count_decinc": [ 0, 2 ],
+      "uniques": 2,
+      "uniques_minmax": [ 2, 2 ],
+      "uniques_decinc": [ 0, 2 ]
+    },
+    {
+      "timestamp": "2025-02-13T00:00:00Z",
       "count": 1,
       "count_minmax": [ 1, 1 ],
       "count_decinc": [ 0, 1 ],
