@@ -1,12 +1,7 @@
 {
-  "count": 25,
-  "uniques": 13,
+  "count": 27,
+  "uniques": 14,
   "clones": [
-    {
-      "timestamp": "2025-01-31T00:00:00Z",
-      "count": 1,
-      "uniques": 1
-    },
     {
       "timestamp": "2025-02-01T00:00:00Z",
       "count": 1,
@@ -49,6 +44,16 @@
     },
     {
       "timestamp": "2025-02-10T00:00:00Z",
+      "count": 1,
+      "uniques": 1
+    },
+    {
+      "timestamp": "2025-02-12T00:00:00Z",
+      "count": 2,
+      "uniques": 2
+    },
+    {
+      "timestamp": "2025-02-13T00:00:00Z",
       "count": 1,
       "uniques": 1
     }
